added buttons on animal page

--- a/animals.html
+++ b/animals.html
@@ -53,8 +53,17 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1> Animals </h1>
-        <p class="lead"> </div>
+        <h1> Vertebrates </h1>
+        <p class="lead"> 
+        <div class = "container"> 	
+          <div class = "center text-center">
+            <a class='btn btn-lg btn-danger' href='animals/bird.html'>Bird</a>
+            <a class='btn btn-lg btn-primary' href='animals/amphibian.html'>Amphibian</a>
+            <a class='btn btn-lg btn-success' href='animals/reptile.html'>Reptile</a>
+            <a class='btn btn-lg btn-info' href='animals/fish.html'>Fish</a>
+            <a class='btn btn-lg btn-warning' href='animals/mammal.html'>Mammal</a>
+        </div>
+        </div>
 
     </div><!-- /.container -->
 
@@ -63,7 +72,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./Starter Template for Bootstrap_files/jquery.min.js"></script>
-    <script src="./Starter Template for Bootstrap_files/bootstrap.min.js"></script>
+    <script src="./Starter Template for Bootstrap_files/bootstrap.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./Starter Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
   
