--- a/animals/reptile.html
+++ b/animals/reptile.html
@@ -38,12 +38,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Welcome</a>
+          <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">Welcome</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Instructions</a></li>
-            <li><a href="animals.html">Vertebrates</a></li>
+            <li ><a href="index.html">Instructions</a></li>
+            <li class="active" ><a href="animals.html">Vertebrates</a></li>
             <li><a href="key.html">Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -53,14 +53,16 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Instructions</h1>
-        <p class="lead">
-        	<br>The dichotomous key is the method employed for identifying unknown organisms. In this activity you are expected to construct your dichotomous key for identifying given species. You may reach some information about particular species when you click “Vertebrates” button. <br><br>
-			Make sure you have an idea about the features of the species before constructing the dichotomous key.
-			Now it is time to begin…<br><br>
-			1. Put the statements of the key in the correct order by dragging the statement onto the related space.<br>
-			2. Identify animals according to the given information by dragging the species names onto the related space next to “animal”.<br></p>
-      </div>
+        <h1> Vertebrates </h1>
+        <p class="lead"> 
+        	<div class = "center text-center">
+        	<button type="button" class="btn btn-lg btn-danger">Bird</button>
+	        <button type="button" class="btn btn-lg btn-primary">Amphibian</button>
+	        <button type="button" class="btn btn-lg btn-success">Reptile</button>
+	        <button type="button" class="btn btn-lg btn-info"> Fish</button>
+	        <button type="button" class="btn btn-lg btn-warning">Mammal</button>	
+			<div>
+        </div>
 
     </div><!-- /.container -->
 
