--- a/key.html
+++ b/key.html
@@ -64,7 +64,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./Starter Template for Bootstrap_files/jquery.min.js"></script>
-    <script src="./Starter Template for Bootstrap_files/bootstrap.min.js"></script>
+    <script src="./Starter Template for Bootstrap_files/bootstrap.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./Starter Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
   
