--- a/animals/amphibian.html
+++ b/animals/amphibian.html
@@ -11,7 +11,7 @@
     <title>Dischotonious Key</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">Welcome</a>
+          <a class="navbar-brand" href="../index.html">Welcome</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="index.html">Instructions</a></li>
-            <li class="active" ><a href="animals.html">Vertebrates</a></li>
-            <li><a href="key.html">Key</a></li>
+            <li ><a href="../index.html">Instructions</a></li>
+            <li class="active" ><a href="../animals.html">Vertebrates</a></li>
+            <li><a href="../key.html">Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,16 +55,39 @@
       <div class="starter-template">
         <h1> Vertebrates </h1>
         <p class="lead"> 
-        	<div class = "center text-center">
-        	<button type="button" class="btn btn-lg btn-danger">Bird</button>
-	        <button type="button" class="btn btn-lg btn-primary">Amphibian</button>
-	        <button type="button" class="btn btn-lg btn-success">Reptile</button>
-	        <button type="button" class="btn btn-lg btn-info"> Fish</button>
-	        <button type="button" class="btn btn-lg btn-warning">Mammal</button>	
-			<div>
+        <div class = "container">   
+          <div class = "center text-center">
+            <a class='btn btn-lg btn-danger' href='../animals/bird.html'>Bird</a>
+            <a class='btn btn-lg btn-primary' href='../animals/amphibian.html'>Amphibian</a>
+            <a class='btn btn-lg btn-success' href='../animals/reptile.html'>Reptile</a>
+            <a class='btn btn-lg btn-info' href='../animals/fish.html'>Fish</a>
+            <a class='btn btn-lg btn-warning' href='../animals/mammal.html'>Mammal</a>
         </div>
-
+        </div>
     </div><!-- /.container -->
+
+    <div class = "container">
+        <img src="../pictures/PhocaGroenlandica.jpg">
+        <div> 
+            <h2> Rhinella Marina </h2>
+            <p>
+            Is a large terrestrial true toad which can be found in Central and South America. It is now has been introduced into various islands. 
+            External fertilization and external development takes place as in all the other amphibians. Females lay single clump spawns wih thousands of eggs. Unusual from other frogs they feed on both dead and living matter. Additionally they also have poison glands and highly toxic to most animals when ingested. <br><br>
+            As all the other amhibians they pass through metamorphosis. Adult ones have three chambered heart that can not seperate oxygenated and deoxygenated blood circulation. Moreover they are cold blooded animals that can not adjust their body temperature. They make their gas exhange mainly by their lungs and skins. Therefore presence of moist skin can be explianed by the aim of enhancing skin respiration.
+            <br><br><br><br>
+            </p>
+        </div>
+        <img src="../pictures/tinctoriusCitronella.png">
+        <div> 
+            <h2> Tinctorius Citronella </h2>
+            <p>
+              Is also called as the dyeing dart frog. It is mainly found in the eastern portion of the Guiana Shield. They can be seen at the sea level, in addition to nearby hills or mountains. <br><br>
+              As all the other amhibians they pass through metamorphosis. Adult ones have three chmanbered heart that can not seperate oxygenated and deoxygenated blood circulation. Moreover they are cold blooded animals that can not adjust their body temperature. They make their gas exhange mainly by their lungs and skins. Therefore presence of moist skin can be explained by the aim of enhancing skin respiration. They feed on living matter.<br><br>
+              In wild, they have a life span between four to six years. After 10-12 months of age they are capable for sexual reproduction. Both external fertilization and development take place.  <br><br>
+              They are mildly toxic. Some tribes use them for rubbing on the skin of the young parrots. Toxification of birds’ skin causes them to grow feathers with different colors.    <br><br>
+            </p>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
@@ -77,3 +100,5 @@
   
 
 </body></html>
+
+
