--- a/animals/mammal.html
+++ b/animals/mammal.html
@@ -11,7 +11,7 @@
     <title>Dischotonious Key</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">Welcome</a>
+          <a class="navbar-brand" href="../index.html">Welcome</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="index.html">Instructions</a></li>
-            <li class="active" ><a href="animals.html">Vertebrates</a></li>
-            <li><a href="key.html">Key</a></li>
+            <li ><a href="../index.html">Instructions</a></li>
+            <li class="active" ><a href="../animals.html">Vertebrates</a></li>
+            <li><a href="../key.html">Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,16 +55,39 @@
       <div class="starter-template">
         <h1> Vertebrates </h1>
         <p class="lead"> 
-        	<div class = "center text-center">
-        	<button type="button" class="btn btn-lg btn-danger">Bird</button>
-	        <button type="button" class="btn btn-lg btn-primary">Amphibian</button>
-	        <button type="button" class="btn btn-lg btn-success">Reptile</button>
-	        <button type="button" class="btn btn-lg btn-info"> Fish</button>
-	        <button type="button" class="btn btn-lg btn-warning">Mammal</button>	
-			<div>
+        <div class = "container">   
+          <div class = "center text-center">
+            <a class='btn btn-lg btn-danger' href='../animals/bird.html'>Bird</a>
+            <a class='btn btn-lg btn-primary' href='../animals/amphibian.html'>Amphibian</a>
+            <a class='btn btn-lg btn-success' href='../animals/reptile.html'>Reptile</a>
+            <a class='btn btn-lg btn-info' href='../animals/fish.html'>Fish</a>
+            <a class='btn btn-lg btn-warning' href='../animals/mammal.html'>Mammal</a>
         </div>
-
+        </div>
     </div><!-- /.container -->
+
+    <div class = "container">
+        <img src="../pictures/PhocaGroenlandica.jpg">
+        <div> 
+            <h2> Phoca Groenlandica </h2>
+            <p>
+            Is a seal species that lives in the low-arctic part of the North Atlantic Ocean. Internal fertilization takes place during sexual reproduction. Females mature sexually at age five to six. There is a 12 day nursing period with harp seal milk. While the pup is still nursing, the mother is very active and leaves the pup alone for extended periods of time. Pups remain near the area where the mother enters the water. <br><br>
+            They are warm blooded animals and use both anatomical and behavioral approaches to managing their body temperatures. Additionally there are four chambers in their heart, which means can separate oxygenated blood from deoxgenated blood. Gas exchange takes place in lungs with alveoli, to convert dexoygenated blood into oxygentaed blood.<br><br>
+
+            They can be classified as strongly migratroy. The population in the northwest moves up to 4000 km towards northeast when they are not in breeding season.  
+            <br><br><br><br>
+            </p>
+        </div>
+        <img src="../pictures/acerodonJubatus.jpg">
+        <div> 
+            <h2> Acerodon Jubatus </h2>
+            <p>
+              Considered as one of the largest bats in the world. They are endemic bats to the Philippines but some can livein Palawan region  and the Batanes and  Babuyan island groups. Habitat of the species are mainly  trees, but also can be mangroves. They reproduce approximately at the same time on all islands. Internal fertilization takes place and female ones give birth during April and May. The newely borned young ones, hook on to their mothers’ fur with their claws. To keep the youngsters cool mother fan them with one wing. As it indicates, they are warm blooded animals. Additionallly they feed their offspring with milk. They often form nursery roosts, with many females giving birth in the same area, be it a cave, a tree hole, or a cavity in a building. <br><br>
+              They are the distributer of plant seeds. Bats which can emerge from the colonoy at sunset, fly into the mountains to feed on fruit. They return to the colonoy before the sunrise. <br><br>
+              Gas exchange takes place in lungs with alveoli, to convert dexoygenated blood into oxygentaed blood. As all mammals they have four chambered heart that separates circulation of oxygenated blood form deoxygenated blood.<br><br>
+            </p>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
