--- a/animals/fish.html
+++ b/animals/fish.html
@@ -11,7 +11,7 @@
     <title>Dischotonious Key</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">Welcome</a>
+          <a class="navbar-brand" href="../index.html">Welcome</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="index.html">Instructions</a></li>
-            <li class="active" ><a href="animals.html">Vertebrates</a></li>
-            <li><a href="key.html">Key</a></li>
+            <li ><a href="../index.html">Instructions</a></li>
+            <li class="active" ><a href="../animals.html">Vertebrates</a></li>
+            <li><a href="../key.html">Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,16 +55,39 @@
       <div class="starter-template">
         <h1> Vertebrates </h1>
         <p class="lead"> 
-        	<div class = "center text-center">
-        	<button type="button" class="btn btn-lg btn-danger">Bird</button>
-	        <button type="button" class="btn btn-lg btn-primary">Amphibian</button>
-	        <button type="button" class="btn btn-lg btn-success">Reptile</button>
-	        <button type="button" class="btn btn-lg btn-info"> Fish</button>
-	        <button type="button" class="btn btn-lg btn-warning">Mammal</button>	
-			<div>
+        <div class = "container">   
+          <div class = "center text-center">
+            <a class='btn btn-lg btn-danger' href='../animals/bird.html'>Bird</a>
+            <a class='btn btn-lg btn-primary' href='../animals/amphibian.html'>Amphibian</a>
+            <a class='btn btn-lg btn-success' href='../animals/reptile.html'>Reptile</a>
+            <a class='btn btn-lg btn-info' href='../animals/fish.html'>Fish</a>
+            <a class='btn btn-lg btn-warning' href='../animals/mammal.html'>Mammal</a>
         </div>
-
+        </div>
     </div><!-- /.container -->
+
+    <div class = "container">
+        <img src="../pictures/xiphiasGladius.png">
+        <div> 
+            <h2> Xiphias Gladius </h2>
+            <p>
+                A cartilaginous fish Xiphias is also called as the swordfish which are large and highly migratory. They can be also labelled as a predatory fish.  They are found Worldwide in the Atlantic, Pacific and Indian  oceans. Main habitats of them are the cold waters at depths between 200- 600 m between 5-27˚C. <br><br>
+                They feed on marine mammals. In contrast they can be eaten by mainly sharks, marlins and sailfishes. They have two chambered heart. Moreover as all the other fishes just deoxygenated blood can pass from their heart towards the gills to become oxygenated.  Therefore for respiration they use gills.<br><br>
+                External fertilization takes place in addition to the external development. Females tend to lay down their eggs in warmer waters theough the year rounds and during the spring and summer months in cooler regions. Eggs measure 1.6-1.8mm in diameter and begin devoloping into emryos about 2.5 days after they are fertilized.<br><br>
+            <br><br>
+            </p>
+        </div>
+        <img src="../pictures/symphysodonAequifasciatus.png">
+        <div> 
+            <h2> Symphysodon Aequifasciatus </h2>
+            <p>
+                Is a songbird species in the tanager family that is mainly found in tropical New World from southern Mexico South to Peru, Boliva and central Brazil, Trinidad and Tobago and on Cuba. The common description of these species shows some changesaccording to the gender. Females and immatures are mainly ggreen. Additionally their red legs are red-bown in the females and red- brown in youngs. Male is violet blue with black wings tail and back with red legs. It feeds on insects and some fruit and nectar.<br><br>
+                They are warm blooded animals with four chambered heart. Different from mammals they have air sacs within their bones to compenstae the pressure diffrences. Additionaly they do not have any alveoli wtihin their lungs. Parabronchi take over the alveoli.<br><br>
+                 
+                Internal fertilization takes place with external development.  Females lay their eggs within their small cup nest in the tree. Their main occupations are the forest edge, open woodland and cocoa and citrus plantations. <br><br>
+            </p>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
