--- a/animals/reptile.html
+++ b/animals/reptile.html
@@ -11,7 +11,7 @@
     <title>Dischotonious Key</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">Welcome</a>
+          <a class="navbar-brand" href="../index.html">Welcome</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="index.html">Instructions</a></li>
-            <li class="active" ><a href="animals.html">Vertebrates</a></li>
-            <li><a href="key.html">Key</a></li>
+            <li ><a href="../index.html">Instructions</a></li>
+            <li class="active" ><a href="../animals.html">Vertebrates</a></li>
+            <li><a href="../key.html">Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,16 +55,41 @@
       <div class="starter-template">
         <h1> Vertebrates </h1>
         <p class="lead"> 
-        	<div class = "center text-center">
-        	<button type="button" class="btn btn-lg btn-danger">Bird</button>
-	        <button type="button" class="btn btn-lg btn-primary">Amphibian</button>
-	        <button type="button" class="btn btn-lg btn-success">Reptile</button>
-	        <button type="button" class="btn btn-lg btn-info"> Fish</button>
-	        <button type="button" class="btn btn-lg btn-warning">Mammal</button>	
-			<div>
+        <div class = "container">   
+          <div class = "center text-center">
+            <a class='btn btn-lg btn-danger' href='../animals/bird.html'>Bird</a>
+            <a class='btn btn-lg btn-primary' href='../animals/amphibian.html'>Amphibian</a>
+            <a class='btn btn-lg btn-success' href='../animals/reptile.html'>Reptile</a>
+            <a class='btn btn-lg btn-info' href='../animals/fish.html'>Fish</a>
+            <a class='btn btn-lg btn-warning' href='../animals/mammal.html'>Mammal</a>
         </div>
-
+        </div>
     </div><!-- /.container -->
+
+    <div class = "container">
+        <img src="../pictures/varanusRosebergi.png">
+        <div> 
+            <h2> Varanus Rosenbergi </h2>
+            <p>
+                Rosenberg's Goanna occurs on the Sydney Sandstone in Wollemi National Park to the north-west of Sydney. 
+                Rosenberg’s Goanna reaches up to 1.5 metres in length. It is dark gray with yellow and white spotting and black bands on its body and all the way down the tail. The juvenile is tinged with orange. <br><br>
+                They make internal fertilization and external development. In Monitor lizards, reproduction occurs sexually. As a result of sexual reproduction, an egg is formed, but rarely an egg is developed by parthenogenesis, which is development of an egg without fertilization.
+                Its diet includes birds, reptiles, mammals, eggs, and carrion.<br><br>
+                They have 3 chambered heart therefore oxygenated and deoxygenated blood is mixed. They are cold-blooded and respire by lungs. When threatened, many species of lizard inhale large amounts of air allowing the organism to appear larger than it actually is.<br><br>
+                <br><br>
+            </p>
+        </div>
+        <img src="../pictures/eunectesMurinus.png">
+        <div> 
+            <h2> Eunectes Murinus </h2>
+            <p>
+                Is a songbird species in the tanager family that is mainly found in tropical New World from southern Mexico South to Peru, Boliva and central Brazil, Trinidad and Tobago and on Cuba. The common description of these species shows some changesaccording to the gender. Females and immatures are mainly ggreen. Additionally their red legs are red-bown in the females and red- brown in youngs. Male is violet blue with black wings tail and back with red legs. It feeds on insects and some fruit and nectar.<br><br>
+                They are warm blooded animals with four chambered heart. Different from mammals they have air sacs within their bones to compenstae the pressure diffrences. Additionaly they do not have any alveoli wtihin their lungs. Parabronchi take over the alveoli.<br><br>
+                 
+                Internal fertilization takes place with external development.  Females lay their eggs within their small cup nest in the tree. Their main occupations are the forest edge, open woodland and cocoa and citrus plantations. <br><br>
+            </p>
+        </div>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
