--- a/animals/amphibian.html
+++ b/animals/amphibian.html
@@ -67,7 +67,7 @@
     </div><!-- /.container -->
 
     <div class = "container">
-        <img src="../pictures/PhocaGroenlandica.jpg">
+        <img src="../pictures/rhinellaMarina.png">
         <div> 
             <h2> Rhinella Marina </h2>
             <p>
