--- a/key.html
+++ b/key.html
@@ -67,6 +67,6 @@
     <script src="./Starter Template for Bootstrap_files/bootstrap.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./Starter Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
-  
+    <script src = "./js/script.js" type="text/javascript"></script>
 
 </body></html>
