--- a/key.html
+++ b/key.html
@@ -51,22 +51,25 @@
     </div>
 
     <div class="container">
-
       <div class="starter-template">
         <h1> Key </h1>
-        <p class="lead"> </p>
-      </div>
+      <div></div>
 
+      </div>
     </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./Starter Template for Bootstrap_files/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
     <script src="./Starter Template for Bootstrap_files/bootstrap.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./Starter Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
+    <script type="text/javascript"></script>
+    
+    <script src= "./jquery-ui-1.11.1/external/jquery/jquery.js"  ></script>
+    <script src = "./jquery-ui-1.11.1/jquery-ui.js" type="text/javascript"></script>
     <script src = "./js/script.js" type="text/javascript"></script>
 
 </body></html>
