--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Instructions</a></li>
             <li><a href="animals.html">Vertebrates</a></li>
-            <li><a href="key.html">Key</a></li>
+            <li><a href="key.html">Dichotomous Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
