--- a/animals/reptile.html
+++ b/animals/reptile.html
@@ -44,7 +44,7 @@
           <ul class="nav navbar-nav">
             <li ><a href="../index.html">Instructions</a></li>
             <li class="active" ><a href="../animals.html">Vertebrates</a></li>
-            <li><a href="../key.html">Key</a></li>
+            <li><a href="../key.html">Dichotomous Key</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
