Changed the colors

--- a/key.html
+++ b/key.html
@@ -242,11 +242,11 @@
     $(".ENDGAME").click(function(){
         for (var i = 0;  i <= results.length ; i++) {
           if (results[i]  == 1) {
-            $('.-' + (i+1)).css('background-color', "green");
+            $('.-' + (i+1)).css('background-color', "#0a8f08");
             $('.-' + (i+1)).css('color', "white");
             console.log("birşeyler oldu correct")
           } else {
-            $('.-' + (i+1)).css('background-color', "red");
+            $('.-' + (i+1)).css('background-color', "#e51c23");
             $('.-' + (i+1)).css('color', "white");
             console.log("birşeyler oldu WRONG")
           }
